# trail-condition-etl

./: .gitignore  DESIGN.md  README.md
.github/workflows/: run-pytest.yml
categorize-trail-conditions/: Dockerfile  README.md  main.py  pyproject.toml  worker.py
categorize-trail-conditions/src/: breakers.py  classifier.py  client.py  db.py  models.py  tasks.py
categorize-trail-conditions/tests/: test_client.py  test_tasks.py
fetch-weather/: Dockerfile  pyproject.toml  worker_ingestion.py
fetch-weather/src/: api.py  breakers.py  client.py  config.py  db.py  tasks.py  weather.py
fetch-weather/tests/: conftest.py  test_api.py  test_client.py  test_mock.py  test_tasks.py  test_weather.py
schedule-jobs/: Dockerfile  pyproject.toml  worker_scheduler.py
schedule-jobs/scheduler/: breakers.py  db.py  tasks.py
schedule-jobs/tests/: test_breakers.py  test_db.py  test_tasks.py
