[project]
name = "categorize-trail-conditions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.12.0",
    "etl",
]

[tool.uv.sources]
etl = { git = "https://github.com/brian-burrows/outpost-etl-core.git", rev = "v.0.0.2" }
